# settings for setup.py
[bdist_wheel]
universal = 1

[metadata]
author = Brett Lykins
author_email = lykinsbd@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GPLv3+
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: POSIX
description = Cisco ASA to Firepower FDM Converter
keywords =
    ssh
    cli
    asa
    firepower
license = GPLv3+
long_description = file: README.rst
long_description_content_type = 'text/x-rst; charset=UTF-8'
platforms =
    Linux
python_requires = >=3.5
url = http://pages.github.com/lykinsbd/asa_to_fdm/

[options]
install_requires =
    aniso8601==6.0.0
    asn1crypto==0.24.0
    cffi==1.12.3
    Click==7.0
    cryptography==2.6.1
    Flask==1.0.3
    Flask-RESTful==0.3.7
    gunicorn==19.9.0
    itsdangerous==1.1.0
    Jinja2==2.10.1
    MarkupSafe==1.1.1
    pycparser==2.19
    pytz==2019.1
    six==1.12.0
    Werkzeug==0.15.4

packages = find:
zip_safe = False

[options.entry_points]
console_scripts =
    asa_to_fdm = asa_to_fdm.app:app

[options.extras_require]
dev =
    coverage
    docutils
    flake8
    flake8-quotes
    ipython
    packaging
    pre-commit
    pylint
    safety
    setuptools
    sphinx
    sphinx-rtd-theme
    sphinx_selective_exclude
    tox
    twine

[options.package_data]
# This section defines the files that will be included in the finished asa_to_fdm package. By default, all Python packages
# under asa_to_fdm will be included. That means any folder that contains a file called __init__.py. Any .py files in those
# folders will get included. If you need to include files with non-.py extensions, list them here.
asa_to_fdm =
    tests/*

[options.packages.find]
include =
    asa_to_fdm
    asa_to_fdm.*


# settings for flake8
[flake8]
doctests = True
exclude =
    # Ignored folders
    .eggs
    .git
    lib
    bin
    include
    build
    dist
    asa_to_fdm.egg-info
    # The only python file under here is a sphinx-specific config file with its own conventions
    docs
ignore =
    # line break before binary operator; see https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
    W503
max-line-length = 120
inline-quotes = "
max-complexity = 10


# settings for coverage.py
[coverage:run]
branch = True
source = asa_to_fdm
omit =
    # Ignore test coverage of tests.
    asa_to_fdm/tests/*

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

ignore_errors = True

[coverage:html]
directory = coverage_html_report
